# docs/swagger.json
@@ -35,6 +35,61 @@
                 }
             }
         },
+        "/operator/sponsorshipsandearnings": {
+            "get": {
+                "description": "Responds with the list of sponsorships and uncollected earnings.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Operator"
+                ],
+                "summary": "Get the sponsorships and earnings.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Operator"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/operator/stakedinto/{address}": {
+            "get": {
+                "description": "Responds with the Operator stake deployed in sponsorship.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Operator"
+                ],
+                "summary": "Get the Streamr Operator staked balance in sponsorship.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "get deployed stake by sponsorship",
+                        "name": "address",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.StakedIntoResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/operator/valuewithoutearnings": {
             "get": {
                 "description": "Responds with the Operator attributes.",
@@ -208,6 +263,9 @@
                 "Function"
             ]
         },
+        "big.Int": {
+            "type": "object"
+        },
         "github_com_ethereum_go-ethereum_accounts_abi.Method": {
             "type": "object",
             "properties": {
@@ -316,6 +374,14 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "models.StakedIntoResponse": {
+            "type": "object",
+            "properties": {
+                "stakedInto": {
+                    "$ref": "#/definitions/big.Int"
                 }
             }
         }
